--- a/settingsform.ui
+++ b/settingsform.ui
@@ -33,7 +33,7 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>10</y>
+     <y>80</y>
      <width>221</width>
      <height>81</height>
     </rect>
@@ -87,6 +87,29 @@
      </rect>
     </property>
    </widget>
+  </widget>
+  <widget class="QComboBox" name="comboBox">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>40</y>
+     <width>481</width>
+     <height>22</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_3">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>20</y>
+     <width>121</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Звуковое устройство</string>
+   </property>
   </widget>
  </widget>
  <resources/>
